// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot custom 1`] = `
<blockquote
  class="yozora-blockquote custom-class"
  style="color:orange"
>
  <p>
    some text1
    <span>
      some text2
    </span>
  </p>
  <blockquote
    class="yozora-blockquote"
  >
    some text3
  </blockquote>
</blockquote>
`;

exports[`snapshot default 1`] = `
<blockquote
  class="yozora-blockquote"
>
  <p>
    some text1
    <span>
      some text2
    </span>
  </p>
  <blockquote
    class="yozora-blockquote"
  >
    some text3
  </blockquote>
</blockquote>
`;
